setup application for mulit-script injection

--- a/example/index.html
+++ b/example/index.html
@@ -7,14 +7,12 @@
   <title>Test Overlay</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="../dist/player-combined.css" />
-  <script src="service-local.js"></script>
 </head>
 
 <body>
   <div class="video-container">
-    <video id="video" src="../video.mp4" autoplay></video>
-    <!-- CONTENT_RIP_START -->
+    <video id="video" src="video.mp4" autoplay></video>
+    <!-- CONTENT_RIP_START
     <div id="as_container" class="no-selection">
       <div class="left-player-content">
         <h2 class="paused-episode-name"></h2>
@@ -143,8 +141,8 @@
         </div>
       </div>
     </div>
-    <!-- CONTENT_RIP_END-->
-    <script src="../dist/player-combined.js"></script>
+
+    CONTENT_RIP_END-->
   </div>
 </body>
 
