--- a/src/extension/html/options.html
+++ b/src/extension/html/options.html
@@ -7,8 +7,10 @@
   <meta name=viewport content="width=device-width,initial-scale=1">
   <title>Vue App</title>
   <link href=/css/options.css rel=preload as=style>
+  <link href=/css/shared.css rel=preload as=style>
   <link href=/js/options.js rel=preload as=script>
   <link href=/css/options.css rel=stylesheet>
+  <link href=/css/shared.css rel=stylesheet>
 </head>
 
 <body>
