--- a/src/extension/html/popup.html
+++ b/src/extension/html/popup.html
@@ -7,8 +7,10 @@
   <meta name=viewport content="width=device-width,initial-scale=1">
   <title>Anime Skip Popup</title>
   <link href=/css/popup.css rel=preload as=style>
+  <link href=/css/shared.css rel=preload as=style>
   <link href=/js/popup.js rel=preload as=script>
   <link href=/css/popup.css rel=stylesheet>
+  <link href=/css/shared.css rel=stylesheet>
 </head>
 
 <body>
