--- a/example/index.html
+++ b/example/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <div class="video-container">
+    <div class="glass"></div>
     <video id="video" src="video.mp4" autoplay></video>
     <!-- CONTENT_RIP_START
     <div id="as_container" class="no-selection">
