--- a/example/index.html
+++ b/example/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="video-container">
     <div class="glass"></div>
-    <video id="video" src="video.mp4" autoplay></video>
+    <video id="video" src="video.mp4" controls muted></video>
     <!-- CONTENT_RIP_START
     <div id="as_container" class="no-selection">
       <div class="left-player-content">
