--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv=X-UA-Compatible content="IE=edge">
   <meta name=viewport content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="index.css">
+  <script type="application/javascript" src="../browser-polyfill.js"></script>
   <title>Anime Skip Popup</title>
 </head>
 
