--- a/src/options/index.html
+++ b/src/options/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="stylesheet" href="index.css" />
+    <script type="application/javascript" src="../browser-polyfill.js"></script>
     <title>Anime Skip Keyboard Shortcuts</title>
   </head>
 
