--- a/example/index.html
+++ b/example/index.html
@@ -23,14 +23,14 @@
   </body>
 
   <script>
-    console.log('added key listener');
+    console.debug('added key listener');
     const keyPress = document.getElementById('key-press');
     document.addEventListener('keydown', function(event) {
-      console.log('pressed key: ' + event.key);
+      console.debug('pressed key: ' + event.key);
       keyPress.innerText = event.key;
     });
     document.onkeydown = function(event) {
-      console.log('onkeydown');
+      console.debug('onkeydown');
       keyPress.innerText = event.key;
     };
   </script>
