Filter out shows that don't match the name

--- a/example/index.html
+++ b/example/index.html
@@ -14,9 +14,8 @@
       <video id="video" src="video.mp4" controls></video>
     </div>
     <p id="key-press"></p>
-    <!-- <h1>Episode: <span id="episode">Test 3</span></h1> -->
-    <h1>Episode: <span id="episode">set up/stand up</span></h1>
-    <h2>Show: <span id="show">Darling in the Fraxx</span></h2>
+    <h1>Episode: <span id="episode">Danzo’s Right Arm</span></h1>
+    <h2>Show: <span id="show">Naruto Shippuden</span></h2>
     <h3>Season: <span id="season">Directors Cut</span></h3>
     <h3>Number: <span id="number">5.5</span></h3>
     <h3>Absolute Number: <span id="absolute-number">Six</span></h3>
