feat: Converted to tailwind and the UI library
- Added all setting to options page, not just keyboard shortcuts
- Webpack works with tailwind & UI library
- Simplified preference components to make them more reusable

--- a/example/index.html
+++ b/example/index.html
@@ -14,11 +14,11 @@
       <video id="video" src="video.mp4" controls></video>
     </div>
     <p id="key-press"></p>
-    <h1>Episode: <span id="episode">Danzo’s Right Arm</span></h1>
-    <h2>Show: <span id="show">Naruto Shippuden</span></h2>
-    <h3>Season: <span id="season">Directors Cut</span></h3>
-    <h3>Number: <span id="number">5.5</span></h3>
-    <h3>Absolute Number: <span id="absolute-number">Six</span></h3>
+    <p>Episode: <span id="episode">Danzo’s Right Arm</span></p>
+    <p>Show: <span id="show">Naruto Shippuden</span></p>
+    <p>Season: <span id="season">Directors Cut</span></p>
+    <p>Number: <span id="number">5.5</span></p>
+    <p>Absolute Number: <span id="absolute-number">Six</span></p>
   </body>
 
   <script>
