--- a/src/options/index.html
+++ b/src/options/index.html
@@ -7,7 +7,7 @@
     <title>Anime Skip Player Settings</title>
   </head>
 
-  <body class="bg-background">
+  <body class="as-bg-background">
     <div id="app"></div>
     <script type="module" src="./index.ts"></script>
   </body>
